tests/common/snapshots/riff__common__tests__riff.rs-14-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 8044
  name: riff
  confidence: 128
  description: "RIFF image, encoding type: WAVE, total size: 8044 bytes"
  always_display: false
  extraction_declined: true
