tests/common/snapshots/riff__common__tests__riff.rs-7-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 30320
  name: riff
  confidence: 128
  description: "RIFF image, encoding type: WEBP, total size: 30320 bytes"
  always_display: false
  extraction_declined: false
