tests/common/snapshots/riff__common__tests__riff.rs-7-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 30320
  success: true
  extractor: riff_built_in
  do_not_recurse: true
  output_directory: "[output_directory]"
